# json-schema-tools

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: compose.rs  constants.rs  key_order.rs  lib.rs  lint.rs  path.rs  reference.rs  refs.rs  schema.rs  util.rs
