[package]
name = "json-schema-tools-cli"
authors = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[[bin]]
name = "json-schema-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
json-schema-tools = { path = "../lib", version = "0.1.0" }
log = "0.4"
serde_json = { workspace = true }
simplelog = "0.12"
thiserror = { workspace = true }
