[package]
name = "json-schema-tools"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/json-schema-tools"
homepage = "https://github.com/travisbrown/json-schema-tools"
description = "JSON Schema code generation tools for Rust"
keywords = ["json", "json-schema"]
license-file = "../LICENSE"
readme = "../README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { version = "2", features = ["serde"] }
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1"
