[package]
name = "json-schema-tools"
authors = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
indexmap = { version = "2", features = ["serde"] }
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
